# terraform-rust-provider

./: .gitignore  Cargo.toml  build.rs
schemas/: tfplugin6.0.proto
src/: cty.rs  main.rs  server.rs  tls.rs  ubicloud.rs  util.rs
tf/: ansible.cfg  example.tfvars  main.tf  terraformrc.example
tf/k8s/: demo.yaml
tf/playbook/: master.ansible.yml  prereq.ansible.yml  worker.ansible.yml
tf/scripts/: create  destroy  install-charts  kubeconfig  playbook  ssh
