[package]
name = "rust-terraform-provider"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "terraform-provider-ubicloud"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.79"
base64 = "0.21.6"
hyper = "0.14"
prost = "0.12.3"
rand = "0.8.5"
rcgen = "0.12.0"
reqwest = "0.11.23"
rmp = "0.8.12"
rmp-serde = "1.1.2"
rustls-pemfile = "2.0.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
tokio-rustls = "0.24.0"
tonic = { version = "0.10.2", features = ["tls"] }
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }

[build-dependencies]
tonic-build = "0.10.2"
